--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ comment:
 social:
     weibo: 2089515861
     github: CharlesHouse
-    # twitter: 
+    facebook: charles.suen.39
     mail: best_charles@outlook.com
 
 # 百度统计 
