--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: 孙超 
 subtitle: CharlesHouse
-description: 不会写代码的游客不是一个好厨子
+description: 一盏灯 一壶茶 一杯浊酒
 # 头像里面的标题
 avatarTitle: Charles
 # 头像里面的描述
