--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ comment:
 # Social
 social:
     weibo: 2089515861
-    github: CharlesHouse
+#    github: CharlesHouse
     facebook: charles.suen.39
     mail: best_charles@outlook.com
 
